--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,4 +1,5 @@
 <h1>MITCHEL SCHOOL TIME TABLE</h1>
 
-<%= link_to "Create TimeTable", new_time_table_path %>
-
+<%= link_to "Create TimeTable", new_time_table_path,class: "btn btn-info" %>
+<%= link_to "View TimeTable",time_tables_path,class: "btn btn-success"%>
+<%= link_to "Alert" , alert_page_path , class: "btn btn-primary" %>
