--- a/app/views/alert/page.html.erb
+++ b/app/views/alert/page.html.erb
@@ -15,6 +15,7 @@
       <th>Subject</th>
       <th>Teacher</th>
       <th>Equipment</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -32,7 +33,6 @@
         <td><%= time_table.subject %></td>
         <td><%= time_table.teacher %></td>
         <td><%= time_table.equipment %></td>
- 
         <td><%= link_to 'Show', time_table %></td>
         <td><%= link_to 'Edit', edit_time_table_path(time_table) %></td>
         <td><%= link_to 'Destroy', time_table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
