--- a/app/views/time_tables/_form.html.erb
+++ b/app/views/time_tables/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :week %>
+    <%= f.input :week , collection: ["a","b"] %>
     <%= f.input :date %>
     <%= f.input :day %>
     <%= f.input :start_time %>
@@ -11,8 +11,7 @@
     <%= f.input :room_number %>
     <%= f.input :subject %>
     <%= f.input :teacher %>
-    <%= f.input :equipment %>
-    <%= f.association :user %>
+    <%= f.input :equipment ,collection: ["TAS uniform","sports uniform"] %>
   </div>
 
   <div class="form-actions">
